--- a/style.css
+++ b/style.css
@@ -1,14 +1,24 @@
+/*PROPIEDADES DEL DOCUMENTO*/
 :root {
   font-size: 16px;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
-h1 {
-  text-align: center;
-  color: brown;
+/*PROPIEDADES GENERALES*/
+* {
+  padding: 0;
+  margin: 0;
 }
 
-p {
+body {
+  background-color: #444;
+  padding: 0.5% 1%;
+}
+
+.header {
+  width: 90%;
+  margin: auto;
+  border: 1px solid white;
   text-align: center;
-  color: brown;
-  font-weight: 500;
+  color: white;
 }
